update cost calculation
